Fix Collapse Issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -136,10 +136,11 @@ body {
     @apply transition-all duration-500 ease-in-out mb-6 mt-5 max-h-[400px];
     opacity: 1;
 
-    &.close-collapse {
-      @apply transition-all duration-500 ease-in-out p-0 m-0 max-h-[4px];
-      opacity: 0;
-    }
+  }
+
+  .close-collapse {
+    @apply transition-all duration-500 ease-in-out p-0 m-0 max-h-[4px];
+    opacity: 0;
   }
 
   .uni-card {
